ontol/ontol-compiler/test-cases/error/known_bugs/map_to_id.on
// BUG: This should work somehow

def key (rel .is: text)
def ent (rel .id: key)
map(
    key(key),
    @match ent( // ERROR no properties expected
        id: key
    )
)
